--- a/templates/ordermanager/order_form.html
+++ b/templates/ordermanager/order_form.html
@@ -152,7 +152,7 @@
                         {% endfor %}
                     </datalist>
                 </div>
-                <div class="col-12">
+                <div class="col-12 visually-hidden">
                     <input type="text" class="form-control-plaintext" name="productid" id="productid" value="">
                 </div>
             </div>
@@ -298,31 +298,7 @@ function updateValue(e) {
     document.getElementById("order_addr").value = ''.concat(addr, detail_addr, extra_addr, postcode);
 }
 </script>
-<script>
-const productSearch = document.getElementById('product')
-productSearch.addEventListener('input', updateProduct);
-$(document).ready(function(){updateProduct()});
 
-function updateProduct(e) {
-    const product_value = document.getElementById('product').value;
-    document.getElementById('productid').value = '';
-
-    if(product_value) {
-        $.get('/manage/productfind/', {product: product_value}, function(data) {
-            const product_getdata = JSON.parse(data);
-            if (product_getdata[0]) {
-                const productidnum = product_getdata[0].id;
-                const namekr = product_getdata[0].name_kr;
-                const nicknamekr = product_getdata[0].nickname_kr;
-                document.getElementById('productid').value = ''.concat(productidnum, "번 상품: ", nicknamekr, " (", namekr, ")");
-                console.log(product_getdata[0])
-            } else {
-                document.getElementById('productid').value = '';
-            }
-        });
-    }
-}
-</script>
 <script>
 function readMultipleImage(input) {
 
