--- a/templates/ordermanager/order_form.html
+++ b/templates/ordermanager/order_form.html
@@ -152,8 +152,7 @@
                         {% endfor %}
                     </datalist>
                 </div>
-                <div class="col-12">
-                    {{ product_name }}
+                <div class="col-12 visually-hidden">
                     <input type="text" class="form-control-plaintext" name="productid" id="productid" value="">
                 </div>
             </div>
