--- a/templates/ordermanager/bill_detail.html
+++ b/templates/ordermanager/bill_detail.html
@@ -184,7 +184,7 @@
                         {% endfor %}
                     </tr>
                 {% else %}
-                    <tr><td colspan="5" class="text-center">주문이 없습니다.</td></tr>
+                    <tr><td colspan="5" class="text-center">결산할 내역이 없습니다.</td></tr>
                 {% endif %}
                 </tbody>
             </table>
@@ -216,7 +216,7 @@
                         {% endfor %}
                     </tr>
                 {% else %}
-                    <tr><td colspan="5" class="text-center">주문이 없습니다.</td></tr>
+                    <tr><td colspan="5" class="text-center">결산할 내역이 없습니다.</td></tr>
                 {% endif %}
                 </tbody>
             </table>
