--- a/templates/ordermanager/order_form.html
+++ b/templates/ordermanager/order_form.html
@@ -144,13 +144,12 @@
             </div>
             <div class="col-md-6">
                 <div class="form-floating">
-                    <input class="form-control" list="productOptions" name="product" id="product" placeholder="제품명" value="{{ product_name|default_if_none:'' }}" required >
-                    <label for="product">제품명</label>
-                    <datalist id="productOptions">
+                    <select class="form-select" name="product" id="product" placeholder="제품명" value="{{ product_name|default_if_none:'' }}" required>
+                        <option selected>''</option>
                         {% for choice in productdb %}
-                            <option value="{{ choice.name_kr }}">{{ choice.nickname_kr }}</option>
+                            <option value="{{ choice.name_kr }}">{{ choice.nickname_kr }} ({{ choice.name_kr }})</option>
                         {% endfor %}
-                    </datalist>
+                    </select>
                 </div>
                 <div class="col-12 visually-hidden">
                     <input type="text" class="form-control-plaintext" name="productid" id="productid" value="">
