--- a/templates/ordermanager/order_form.html
+++ b/templates/ordermanager/order_form.html
@@ -145,7 +145,7 @@
             <div class="col-md-6">
                 <div class="form-floating">
                     <select class="form-select" name="product" id="product" placeholder="제품명" value="{{ product_name|default_if_none:'' }}" required>
-                        <option selected>''</option>
+                        <option selected value=""></option>
                         {% for choice in productdb %}
                             <option value="{{ choice.name_kr }}">{{ choice.nickname_kr }} ({{ choice.name_kr }})</option>
                         {% endfor %}
