--- a/templates/ordermanager/order_form.html
+++ b/templates/ordermanager/order_form.html
@@ -144,7 +144,7 @@
             </div>
             <div class="col-md-6">
                 <div class="form-floating">
-                    <label for="quantity">상품명</label>
+                    <label for="product">상품명</label>
                     <select class="form-select" name="product" id="product" value="{{ product_name|default_if_none:'' }}" required>
                         <option selected value=""></option>
                         {% for choice in productdb %}
