--- a/templates/ordermanager/order_form.html
+++ b/templates/ordermanager/order_form.html
@@ -144,13 +144,13 @@
             </div>
             <div class="col-md-6">
                 <div class="form-floating">
-                    <label for="product">상품명</label>
-                    <select class="form-select" name="product" id="product" value="{{ product_name|default_if_none:'' }}" required>
+                    <select class="form-select" name="product" id="product" value="{{ product_name|default_if_none:'' }}" aria-label="Floating label select example" required>
                         <option selected value=""></option>
                         {% for choice in productdb %}
                             <option value="{{ choice.name_kr }}">{{ choice.nickname_kr }} ({{ choice.name_kr }})</option>
                         {% endfor %}
                     </select>
+                    <label for="product">상품명</label>
                 </div>
                 <div class="col-12 visually-hidden">
                     <input type="text" class="form-control-plaintext" name="productid" id="productid" value="">
